# fastapi-example

./: main.py  openapi.json  pyproject.toml  start.sh
